* up groovy and spock versions * enable functionalTests